# bff_with_grpc_and_vite_ssr

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
backend/: app.py  engine_template.py
backend/grpc_contracts/helloworld/: __init__.py
backend/grpc_contracts/helloworld2/: __init__.py
backend/templates/: index.html
cli_cmd/: frontend_interface_generate.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.js2
frontend/assets_source/any/: index.js
frontend/assets_source/main_page/: index.ts  style.css
frontend/back_interface_endpoint/: schemas.gen.ts  services.gen.ts  types.gen.ts
grpc_exemple/: echo_grpc.py  echo_grpc_with_unix_socket.py
protos/: hello2.proto
