[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["i.guliaev <ilya.gulyayev@simbirsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.4"
typer = "^0.12.3"
fastapi = "^0.111.0"
hypercorn = "^0.16.0"
watchdog = "^4.0.0"
aiohttp = "^3.9.5"
compiler = "^0.2.0"
black = "^24.4.2"
protobuf = "^5.26.1"
grpclib = "^0.4.7"
grpcio-tools = "^1.63.0"
pydantic = "^2.7.1"
betterproto = {git = "https://github.com/danielgtaylor/python-betterproto.git"}
isort = "^5.13.2"
pure-protobuf = {git = "https://github.com/eigenein/protobuf.git"}
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
